Smoother Login for Leitstellen with scoped events Added Name search for events in SitRoom
